# dak

./: .gitignore  CMakeLists.txt  Create-Solution.cmd  README  cmake.yml
any_op/: CMakeLists.txt  Readme.md
any_op/include/dak/any_op/: all.h  as_op.h  binary_op.h  compare_op.h  construct_op.h  convert_op.h  dominant_op.h  get_type_info_op.h  get_type_name_op.h  is_compatible_op.h  is_integer_op.h  is_real_op.h  is_unsigned_op.h  make_op.h  nullary_op.h  op.h  op_makers.h  op_selector.h  size_op.h  stream_op.h  supers_of_op.h  to_text_op.h  unary_op.h
any_op/src/: compare_op.cpp  construct_op.cpp  convert_op.cpp  dominant_op.cpp  get_type_info_op.cpp  get_type_name_op.cpp  is_compatible_op.cpp  is_integer_op.cpp  is_real_op.cpp  is_unsigned_op.cpp  istream_op.cpp  make_op.cpp  ostream_op.cpp  register_ops.cpp  size_op.cpp  stream_op.cpp  supers_of_op.cpp  to_text_op.cpp
any_op_tests/: CMakeLists.txt
any_op_tests/include/dak/any_op/tests/: helpers.h
any_op_tests/src/: any_tests.cpp  compare_op_tests.cpp  construct_op_tests.cpp  convert_op_tests.cpp  dominant_op_tests.cpp  get_type_info_op_tests.cpp  get_type_name_op_tests.cpp  is_compatible_op_tests.cpp  is_integer_op_tests.cpp  is_real_op_tests.cpp  is_unsigned_op_tests.cpp  make_op_tests.cpp  size_op_tests.cpp  stream_op_tests.cpp  supers_of_op_tests.cpp  to_text_op_tests.cpp
command/: CMakeLists.txt
command/include/dak/command/: command.h  command_tree.h  command_work_item.h  types.h
command/src/: command.cpp  command_ops.cpp  command_tree.cpp  command_work_item.cpp
command_tests/: CMakeLists.txt
command_tests/include/dak/command/tests/: helpers.h
command_tests/src/: command_tree_tests.cpp
geometry/: CMakeLists.txt
geometry/include/dak/geometry/: constants.h  edge.h  edges_map.h  face.h  geometry_io.h  intersect.h  point.h  polygon.h  rectangle.h  transform.h  utility.h
geometry/src/: edges_map.cpp  face.cpp  filler.cpp  geometry_io.cpp  intersect.cpp  point.cpp  polygon.cpp  rectangle.cpp  transform.cpp  utility.cpp
geometry_tests/: CMakeLists.txt
geometry_tests/include/dak/geometry/tests/: helpers.h
geometry_tests/src/: edge_tests.cpp  edges_map_tests.cpp  face_tests.cpp  intersect_tests.cpp  point_tests.cpp  polygon_tests.cpp  rectangle_tests.cpp  utility_tests.cpp
object/: CMakeLists.txt
object/include/dak/object/: all.h  array.h  command.h  command_tree.h  constant.h  dict.h  edit_ref.h  element.h  exact_name.h  make_object_op.h  make_op.h  name.h  name_stuff.h  namer.h  namespace.h  object.h  op_makers.h  ref.h  ref_base.h  ref_counted.h  ref_istream.h  ref_istream_op.h  ref_ostream.h  ref_ostream_op.h  ref_stream.h  similar.h  stream.h  timeline.h  transaction.h  types.h  valid_ref.h  value.h  voc.h  voc_internal.h  weak_ref.h
object/src/: array.cpp  command.cpp  command_tree.cpp  constant.cpp  dict.cpp  element.cpp  exact_name.cpp  name.cpp  name_stuff.cpp  namer.cpp  namespace.cpp  object.cpp  object_ops.cpp  ref_base.cpp  ref_counted.cpp  ref_input.cpp  ref_istream.cpp  ref_istream_op.cpp  ref_ostream.cpp  ref_ostream_op.cpp  ref_output.cpp  ref_stream.cpp  similar.cpp  stream.cpp  timeline.cpp  transaction.cpp  value.cpp  voc.cpp
object_io/: CMakeLists.txt
object_io/include/dak/object_io/: all.h  ref_input.h  ref_istream.h  ref_istream_op.h  ref_ostream.h  ref_ostream_op.h  ref_output.h
object_io/src/: ref_input.cpp  ref_istream.cpp  ref_istream_op.cpp  ref_ostream.cpp  ref_ostream_op.cpp  ref_output.cpp
object_io_tests/: CMakeLists.txt
object_io_tests/include/dak/object_io/tests/: helpers.h
object_io_tests/src/: ref_istream_tests.cpp  ref_ostream_tests.cpp  ref_stream_tests.cpp
object_tests/: CMakeLists.txt
object_tests/include/dak/object/tests/: data.h  helpers.h
object_tests/src/: array_tests.cpp  dict_tests.cpp  element_tests.cpp  make_op_tests.cpp  name_tests.cpp  namespace_tests.cpp  object_tests.cpp  ref_stream_tests.cpp  ref_tests.cpp  stream_tests.cpp  transaction_tests.cpp  value_conversion_tests.cpp  value_ensure_tests.cpp  value_function_tests.cpp  value_tests.cpp
ui/: CMakeLists.txt
ui/include/dak/ui/: color.h  drawing.h  drawing_base.h  dxf_drawing.h  edges_map_layer.h  eps_drawing.h  layer.h  layered.h  modifiers.h  mouse.h  stroke.h  transformable.h  transformer.h
ui/src/: color.cpp  drawing_base.cpp  dxf_drawing.cpp  edges_map_layer.cpp  eps_drawing.cpp  layer.cpp  layered.cpp  mouse.cpp  transformer.cpp
ui_qt/: CMakeLists.txt
ui_qt/include/dak/ui/qt/: canvas.h  color_editor.h  convert.h  double_editor.h  drawing_canvas.h  edges_map_canvas.h  function_drawing_canvas.h  int_editor.h  layered_canvas.h  message_reporter.h  paint_device_drawing.h  paint_device_transformable.h  painter_drawing.h  qt_drawing_base.h  (+2 more)
ui_qt/src/: canvas.cpp  color_editor.cpp  convert.cpp  double_editor.cpp  drawing_canvas.cpp  edges_map_canvas.cpp  int_editor.cpp  layered_canvas.cpp  message_reporter.cpp  paint_device_drawing.cpp  paint_device_transformable.cpp  painter_drawing.cpp  painter_transformable.cpp  qt_drawing_base.cpp  widget_mouse_emitter.cpp
utility/: CMakeLists.txt
utility/include/dak/solver/: problem.h  solution.h  solve.h
utility/include/dak/utility/: all.h  constants.h  containers.h  multi_thread_progress.h  no_copy.h  number.h  progress.h  selection.h  sequential_items_worker.h  sequential_worker.h  stopwatch.h  text.h  thread_pool.h  threaded_items_worker.h  threaded_work.h  threaded_worker.h  type_info.h  types.h  undo_stack.h  work_item.h
utility/src/: multi_thread_progress.cpp  sequential_items_worker.cpp  stopwatch.cpp  stream_progress.cpp  text.cpp  threaded_items_worker.cpp  type_info.cpp  undo_stack.cpp
utility_tests/: CMakeLists.txt
utility_tests/src/: get_type_info_tests.cpp  get_type_name_tests.cpp  multi_thread_progress_tests.cpp  number_tests.cpp  progress_tests.cpp  sequential_items_worker_tests.cpp  sequential_worker_tests.cpp  stopwatch_tests.cpp  stream_progress_tests.cpp  text_tests.cpp  thread_pool_tests.cpp  threaded_items_worker_tests.cpp  threaded_work_tests.cpp  threaded_worker_tests.cpp  undo_stack_tests.cpp
(+8 files in other folders)
